<?xml version="1.0"?>
<package format="2">
  <name>a2_launchers</name>
  <version>0.1.0</version>
  <description>Launchers for Asssignment 2</description>

  <maintainer email="up2013041972@fe.up.pt">Joao Costa</maintainer>
  <maintainer email="up201302828@fe.up.pt">Gustavo Pinto</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>stdr_server</exec_depend>
  <exec_depend>stdr_robot</exec_depend>
  <exec_depend>stdr_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  
  <exec_depend>a2_follow_wall</exec_depend>
  <exec_depend>a2_resources</exec_depend>

  <export>
  </export>
</package>
